--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "lucide-react": "^0.525.0",
     "motion": "^12.23.6",
     "next": "15.4.2",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
