--- a/package.json
+++ b/package.json
@@ -11,16 +11,23 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^5.1.1",
+    "@notionhq/client": "^4.0.1",
     "@reduxjs/toolkit": "^2.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ioredis": "^5.6.1",
+    "katex": "^0.16.22",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.6",
     "next": "15.4.2",
     "next-themes": "^0.4.6",
+    "notion-client": "^7.4.2",
+    "prismjs": "^1.30.0",
     "react": "19.1.0",
+    "react-code-blocks": "^0.1.6",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-notion-x": "^7.4.2",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "sonner": "^2.0.6",
