--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "19.1.0",
     "react-code-blocks": "^0.1.6",
     "react-dom": "19.1.0",
+    "react-github-calendar": "^4.5.9",
     "react-hook-form": "^7.60.0",
     "react-notion-x": "^7.4.2",
     "react-redux": "^9.2.0",
