--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^5.1.1",
     "@notionhq/client": "^4.0.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/typography": "^0.5.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "i18next": "^25.3.2",
     "ioredis": "^5.6.1",
     "katex": "^0.16.22",
     "lucide-react": "^0.525.0",
@@ -29,6 +32,7 @@
     "react-dom": "19.1.0",
     "react-github-calendar": "^4.5.9",
     "react-hook-form": "^7.60.0",
+    "react-i18next": "^15.6.1",
     "react-notion-x": "^7.4.2",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
