--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "motion": "^12.23.11",
     "next": "15.4.10",
     "next-themes": "^0.4.6",
-    "notion-client": "^7.4.2",
     "prismjs": "^1.30.0",
     "react": "19.1.0",
     "react-code-blocks": "^0.1.6",
@@ -33,8 +32,8 @@
     "react-github-calendar": "^4.5.9",
     "react-hook-form": "^7.60.0",
     "react-i18next": "^15.6.1",
-    "react-notion-x": "^7.4.2",
     "react-redux": "^9.2.0",
+    "react-syntax-highlighter": "^16.1.0",
     "redux-persist": "^6.0.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
@@ -46,6 +45,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/redux-persist": "^4.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.2",
