--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.60.0",
     "react-i18next": "^15.6.1",
     "react-redux": "^9.2.0",
+    "react-simple-typewriter": "^5.0.1",
     "react-syntax-highlighter": "^16.1.0",
     "redux-persist": "^6.0.0",
     "sonner": "^2.0.6",
